--- a/package.json
+++ b/package.json
@@ -35,35 +35,36 @@
     "url": "https://github.com/pumano/test-storage/issues"
   },
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "@angular/upgrade": "^4.0.0",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/forms": "^4.0.1",
+    "@angular/http": "^4.0.1",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/router": "^4.0.1",
+    "@angular/upgrade": "^4.0.1",
     "angular-in-memory-web-api": "^0.3.1",
-    "angular2-jwt": "^0.1.28",
+    "angular2-jwt": "^0.2.0",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "errorhandler": "^1.5.0",
     "express": "^4.15.2",
-    "express-validator": "^3.1.2",
+    "express-validator": "^3.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jwt-simple": "^0.5.1",
     "method-override": "^2.3.8",
-    "mongoose": "^4.9.1",
+    "mongoose": "^4.9.3",
     "morgan": "^1.8.1",
     "normalize-css": "^2.3.1",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "5.2.0",
+    "rxjs": "5.3.0",
     "serve-favicon": "^2.4.2",
     "systemjs": "^0.19.47",
+    "uuid": "^3.0.1",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
@@ -77,26 +78,26 @@
     "@types/should-promised": "0.0.27",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "codelyzer": "^3.0.0-beta.4",
+    "codelyzer": "^2.1.1",
     "concurrently": "^3.4.0",
     "config": "^1.25.1",
     "database-updates": "^1.2.0",
-    "factory-girl": "^4.2.1",
+    "factory-girl": "^4.2.2",
     "faker": "^4.1.0",
     "forever": "^0.15.3",
     "mocha": "^3.2.0",
-    "mockgoose": "^7.0.7",
+    "mockgoose": "^7.1.1",
     "multer": "^1.3.0",
     "nodemon": "^1.11.0",
     "protractor": "^5.1.1",
     "should": "^11.2.1",
     "supertest": "^3.0.0",
     "systemjs-builder": "^0.16.4",
-    "tslint": "^4.5.1",
-    "typescript": "^2.2.1",
+    "tslint": "^5.0.0",
+    "typescript": "^2.2.2",
     "typings": "^2.1.0",
     "versiony-cli": "^1.3.0",
-    "webpack": "^2.3.2",
+    "webpack": "^2.3.3",
     "yargs": "^7.0.2",
     "yarn": "^0.21.3"
   }
