--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,42 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# Ignore IDE settings
-.vscode
-.DS_Store
+# compiled output
+/dist
+/tmp
+/out-tsc
 
-# Ignore from that directories
-node_modules/
-typings/
-dist/
+# dependencies
+/node_modules
 
-# Ignore generated js and .map files after typescript transpiling 
-client/**/*.js
-test/client/**/*.js
-*.map
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-# Ignore npm debug log
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
 npm-debug.log
+testem.log
+/typings
+
+# e2e
+/e2e/*.js
+/e2e/*.map
+
+# System Files
+.DS_Store
+Thumbs.db
