--- a/package.json
+++ b/package.json
@@ -1,55 +1,40 @@
 {
   "name": "test-storage",
-  "version": "0.7.41",
+  "version": "0.9.42",
   "description": "Test Case Management System",
-  "main": "app.js",
+  "license": "GPLv3",
+  "author": "Dmitry Zakharov",
   "private": true,
-  "scripts": {
-    "prestart": "npm run env NODE_ENV=production",
-    "start": "concurrently \"tsc -w -p ./client\" \"nodemon app.js --exitcrash\" ",
-    "prestartdev": "npm run env NODE_ENV=development",
-    "startdev": "concurrently \"tsc -w -p ./client\" \"nodemon app.js --exitcrash\" ",
-    "prestarttest": "concurrently \"tsc -p ./client\" \"tsc -p ./test\" ",
-    "starttest": "nodemon app.js --exitcrash",
-    "forever": "concurrently \"tsc -w -p ./client\" \"forever start -c nodemon app.js --exitcrash\" ",
-    "testserver": "./node_modules/.bin/mocha ./test/server/ --recursive --check-leaks",
-    "pretest": "npm run env NODE_ENV=test",
-    "test": "./node_modules/.bin/mocha ./test/server/ --recursive --check-leaks",
-    "webdriverupdate": "./node_modules/.bin/webdriver-manager update",
-    "webdriverstart": "./node_modules/.bin/webdriver-manager start",
-    "protractor": "npm run prestarttest & sleep 10 & npm run starttest & sleep 10 && protractor ./test/protractor.conf.js --suite all",
-    "postinstall": "./node_modules/.bin/typings install",
-    "typings": "typings",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "lint": "tslint 'client/**/*.ts'",
-    "bundle:prod": "node tools/builder.js --prod"
-  },
   "keywords": [
     "test management",
     "test case management"
   ],
-  "author": "Dmitry Zakharov",
-  "license": "GPLv3",
   "bugs": {
     "url": "https://github.com/pumano/test-storage/issues"
   },
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve --proxy-config proxy.conf.json && nodemon server.js --exitcrash",
+    "lint": "ng lint",
+    "test": "",
+    "pree2e": "webdriver-manager update",
+    "e2e": "ng e2e",
+    "build": "ng build && nodemon server.js --exitcrash",
+    "build:prod": "ng build --prod && nodemon server.js --exitcrash"
+  },
   "dependencies": {
-    "@angular/common": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/core": "^4.0.1",
-    "@angular/forms": "^4.0.1",
-    "@angular/http": "^4.0.1",
-    "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/router": "^4.0.1",
-    "@angular/upgrade": "^4.0.1",
-    "angular-in-memory-web-api": "^0.3.1",
-    "angular2-jwt": "^0.2.0",
+    "@angular/common": "^4.0.2",
+    "@angular/compiler": "^4.0.2",
+    "@angular/core": "^4.0.2",
+    "@angular/forms": "^4.0.2",
+    "@angular/http": "^4.0.2",
+    "@angular/platform-browser": "^4.0.2",
+    "@angular/platform-browser-dynamic": "^4.0.2",
+    "@angular/router": "^4.0.2",
+    "angular2-jwt": "^0.2.2",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
-    "core-js": "^2.4.1",
     "errorhandler": "^1.5.0",
     "express": "^4.15.2",
     "express-validator": "^3.1.3",
@@ -57,47 +42,39 @@
     "jquery": "^3.2.1",
     "jwt-simple": "^0.5.1",
     "method-override": "^2.3.8",
-    "mongoose": "^4.9.3",
+    "mongoose": "^4.9.4",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
     "normalize-css": "^2.3.1",
-    "reflect-metadata": "^0.1.10",
-    "rxjs": "5.3.0",
+    "core-js": "^2.4.1",
+    "rxjs": "^5.1.0",
     "serve-favicon": "^2.4.2",
-    "systemjs": "^0.19.47",
-    "zone.js": "^0.8.5"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@types/chai": "^3.4.35",
-    "@types/chai-as-promised": "0.0.30",
-    "@types/core-js": "^0.9.39",
-    "@types/es6-promise": "0.0.32",
-    "@types/mocha": "^2.2.40",
-    "@types/node": "^7.0.11",
-    "@types/should": "^8.1.30",
-    "@types/should-promised": "0.0.27",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "codelyzer": "^2.1.1",
+    "@angular/cli": "1.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~2.0.0",
     "concurrently": "^3.4.0",
     "config": "^1.25.1",
     "database-updates": "^1.2.0",
-    "factory-girl": "^4.2.2",
-    "faker": "^4.1.0",
-    "forever": "^0.15.3",
-    "mocha": "^3.2.0",
-    "mockgoose": "^7.1.1",
     "nodemon": "^1.11.0",
-    "protractor": "^5.1.1",
     "should": "^11.2.1",
     "supertest": "^3.0.0",
-    "systemjs-builder": "^0.16.4",
-    "tslint": "^5.0.0",
-    "typescript": "^2.2.2",
-    "typings": "^2.1.0",
-    "versiony-cli": "^1.3.0",
-    "webpack": "^2.3.3",
-    "yargs": "^7.0.2",
-    "yarn": "^0.22.0"
+    "mocha": "^3.2.0",
+    "jasmine-core": "~2.5.2",
+    "jasmine-spec-reporter": "~3.2.0",
+    "karma": "~1.4.1",
+    "karma-chrome-launcher": "~2.0.0",
+    "karma-cli": "~1.0.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "protractor": "~5.1.0",
+    "ts-node": "~2.0.0",
+    "tslint": "~4.5.0",
+    "typescript": "~2.2.0"
   }
 }
