--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
+sudo: required
 language: node_js
 node_js:
   - "6.9"
   - "7"
+
+  addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 
 before_script:
   - export CHROME_BIN=chromium-browser
