--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,9 @@ node_js:
   - "6.9"
   - "7"
 
-  addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+before_install:
+ - sudo apt-get update
+ - sudo apt-get install chromium-chromedriver
 
 before_script:
   - export CHROME_BIN=chromium-browser
