--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 sudo: required
+dist: trusty
 language: node_js
 node_js:
   - "6.9"
   - "7"
-
 before_install:
  - sudo apt-get update
  - sudo apt-get install chromium-chromedriver
