--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,13 @@ language: node_js
 node_js:
   - "6.9"
   - "7"
-before_install:
- - sudo apt-get update
- - sudo apt-get install chromium-chromedriver
 
-before_script:
+services:
+  - mongodb
+
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install chromium-chromedriver
   - export CHROME_BIN=chromium-browser
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
@@ -17,9 +19,11 @@ before_script:
   - sleep 10
   - 'node_modules/protractor/bin/webdriver-manager start 2>&1 &'
   - sleep 5
+
+before_script:
+  - sleep 5
   - echo 'db.addUser("admin", "admin");' | mongo test-storage
 
 install:
   - yarn
-services:
-  - mongodb
+
