--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e",
     "build": "ng build && nodemon server.js --exitcrash",
-    "build:prod": "ng build --prod --aot && nodemon server.js --exitcrash"
+    "build:prod": "ng build --prod --aot && nodemon server.js --exitcrash",
+    "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
   },
   "dependencies": {
     "@angular/common": "^4.0.3",
@@ -58,27 +59,28 @@
   "devDependencies": {
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.3",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
+    "@biesbjerg/ngx-translate-extract": "^2.2.2",
+    "@types/jasmine": "2.5.47",
+    "@types/node": "~7.0.13",
+    "codelyzer": "~2.1.1",
     "concurrently": "^3.4.0",
     "config": "^1.25.1",
     "database-updates": "^1.2.0",
-    "nodemon": "^1.11.0",
-    "should": "^11.2.1",
-    "supertest": "^3.0.0",
-    "mocha": "^3.2.0",
     "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
+    "jasmine-spec-reporter": "~4.0.0",
     "karma": "~1.6.0",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
     "protractor": "~5.1.1",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "should": "^11.2.1",
+    "supertest": "^3.0.0",
+    "ts-node": "~3.0.2",
+    "tslint": "~5.1.0",
+    "typescript": "~2.2.2"
   }
 }
