--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-storage",
-  "version": "0.13.46",
+  "version": "0.13.47",
   "description": "Test Case Management System",
   "license": "GPLv3",
   "author": "Dmitry Zakharov",
@@ -17,9 +17,10 @@
     "start": "ng build --prod && nodemon server.js --exitcrash",
     "dev": "concurrently \"ng serve --proxy-config proxy.conf.json\" \"nodemon server.js --exitcrash\" ",
     "lint": "ng lint",
-    "test": "ng test --single-run",
+    "test": "ng test --single-run && npm run test:backend",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e",
+    "test:backend": "./node_modules/.bin/_mocha ./test/server/ --recursive --check-leaks",
     "build": "ng build && nodemon server.js --exitcrash",
     "build:prod": "ng build --prod --aot && nodemon server.js --exitcrash",
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
