--- a/package.json
+++ b/package.json
@@ -26,16 +26,17 @@
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
   },
   "dependencies": {
-    "@angular/common": "^4.0.3",
-    "@angular/compiler": "^4.0.3",
-    "@angular/core": "^4.0.3",
-    "@angular/forms": "^4.0.3",
-    "@angular/http": "^4.0.3",
-    "@angular/platform-browser": "^4.0.3",
-    "@angular/platform-browser-dynamic": "^4.0.3",
-    "@angular/router": "^4.0.3",
+    "@angular/common": "^4.1.0",
+    "@angular/compiler": "^4.1.0",
+    "@angular/core": "^4.1.0",
+    "@angular/forms": "^4.1.0",
+    "@angular/http": "^4.1.0",
+    "@angular/platform-browser": "^4.1.0",
+    "@angular/platform-browser-dynamic": "^4.1.0",
+    "@angular/router": "^4.1.0",
     "@ngx-translate/core": "6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
+    "angular-tree-component": "^3.5.0",
     "angular2-jwt": "^0.2.3",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
@@ -43,45 +44,44 @@
     "core-js": "^2.4.1",
     "errorhandler": "^1.5.0",
     "express": "^4.15.2",
-    "express-validator": "^3.1.3",
+    "express-validator": "^3.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jwt-simple": "^0.5.1",
     "method-override": "^2.3.8",
-    "mongoose": "^4.9.4",
+    "mongoose": "^4.9.7",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
     "ngx-bootstrap": "^1.6.6",
     "normalize-css": "^2.3.1",
-    "rxjs": "^5.1.0",
-    "serve-favicon": "^2.4.2",
-    "zone.js": "^0.8.4"
+    "rxjs": "^5.3.0",
+    "zone.js": "^0.8.9"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.3",
+    "@angular/cli": "1.0.1",
+    "@angular/compiler-cli": "^4.1.0",
     "@biesbjerg/ngx-translate-extract": "^2.2.2",
     "@types/jasmine": "2.5.47",
-    "@types/node": "~7.0.13",
-    "codelyzer": "~2.1.1",
+    "@types/node": "~7.0.15",
+    "codelyzer": "~3.0.1",
     "concurrently": "^3.4.0",
     "config": "^1.25.1",
     "database-updates": "^1.2.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~4.0.0",
+    "jasmine-core": "~2.6.1",
+    "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.6.0",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "mocha": "^3.2.0",
+    "mocha": "^3.3.0",
     "nodemon": "^1.11.0",
     "protractor": "~5.1.1",
     "should": "^11.2.1",
     "supertest": "^3.0.0",
     "ts-node": "~3.0.2",
     "tslint": "~5.1.0",
-    "typescript": "~2.2.2"
+    "typescript": "~2.3.2"
   }
 }
