--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "express-validator": "^3.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "jwt-simple": "^0.5.1",
+    "jsonwebtoken": "^7.4.1",
     "method-override": "^2.3.9",
     "mongoose": "^4.10.0",
     "morgan": "^1.8.1",
