--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-storage",
-  "version": "0.17.55",
+  "version": "0.17.56",
   "description": "Test Case Management System",
   "license": "GPLv3",
   "author": "Dmitry Zakharov",
@@ -14,9 +14,10 @@
   },
   "scripts": {
     "ng": "ng",
-    "prestart": "./node_modules/.bin/tsc -p ./server",
     "start": "node ./dist/server/server.js",
-    "postinstall": "./node_modules/.bin/ng build --prod --aot",
+    "postinstall": "./node_modules/.bin/ng build --prod --aot && ./node_modules/.bin/tsc -p ./server",
+    "server:build": "tsc -p ./server && concurrently \"tsc -w -p ./server\" \"nodemon ./dist/server/server.js\" ",
+    "client:build": "ng build --prod --aot",
     "dev": "concurrently \"npm run server:build \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "lint": "ng lint",
     "test": "ng test --single-run",
@@ -64,6 +65,7 @@
     "ngx-bootstrap": "^1.6.6",
     "nodemon": "^1.11.0",
     "normalize-css": "^2.3.1",
+    "typescript": "~2.3.2",
     "rxjs": "^5.4.0",
     "zone.js": "^0.8.11"
   },
