--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-storage",
-  "version": "0.20.0",
+  "version": "0.20.1",
   "description": "Test Case Management System",
   "license": "GPLv3",
   "author": "Dmitry Zakharov",
@@ -21,6 +21,7 @@
     "dev": "concurrently \"npm run server:build \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "lint": "ng lint",
     "test": "ng test --single-run && npm run test:backend",
+    "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e",
     "test:backend": "./node_modules/.bin/_mocha --compilers ts:ts-node/register ./test/server/**/*.spec.ts --recursive --check-leaks -t 50000",
@@ -73,9 +74,9 @@
     "@biesbjerg/ngx-translate-extract": "^2.3.1",
     "@types/chai": "^3.5.2",
     "@types/chai-http": "0.0.30",
+    "@types/faker": "^4.1.0",
     "@types/jasmine": "2.5.47",
     "@types/mocha": "2.2.41",
-    "@types/should": "^8.3.0",
     "@types/supertest": "^2.0.0",
     "chai": "^4.0.0",
     "chai-http": "^3.0.0",
@@ -94,7 +95,6 @@
     "mocha": "^3.4.2",
     "mockgoose": "^7.3.1",
     "protractor": "~5.1.2",
-    "should": "^11.2.1",
     "supertest": "^3.0.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2"
