--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e",
-    "test:backend": "./node_modules/.bin/_mocha --compilers ts:ts-node/register ./test/server/**/*.spec.ts --recursive --check-leaks -t 50000",
+    "test:backend": "./node_modules/.bin/_mocha ./test/server/**/*.spec.ts --compilers ts:ts-node/register --recursive --check-leaks -t 50000",
     "build": "npm run client:build && npm run server:build",
     "build:prod": "ng build --prod --aot && nodemon server.js --exitcrash",
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
   },
   "dependencies": {
-    "@angular/cli": "1.0.6",
+    "@angular/cli": "1.1.0",
     "@angular/common": "^4.1.3",
     "@angular/compiler": "^4.1.3",
     "@angular/compiler-cli": "^4.1.3",
@@ -46,7 +46,7 @@
     "@types/errorhandler": "0.0.30",
     "@types/express": "^4.0.35",
     "@types/morgan": "^1.7.32",
-    "@types/node": "~7.0.22",
+    "@types/node": "~7.0.23",
     "angular2-jwt": "^0.2.3",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
@@ -60,25 +60,25 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.1",
-    "mongoose": "^4.10.3",
+    "mongoose": "^4.10.4",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
-    "ngx-bootstrap": "^1.6.6",
+    "ngx-bootstrap": "^1.7.0",
     "nodemon": "^1.11.0",
     "normalize-css": "^2.3.1",
-    "typescript": "~2.3.3",
+    "typescript": "~2.3.4",
     "rxjs": "^5.4.0",
     "zone.js": "^0.8.11"
   },
   "devDependencies": {
     "@biesbjerg/ngx-translate-extract": "^2.3.1",
-    "@types/chai": "^3.5.2",
+    "@types/chai": "^4.0.0",
     "@types/chai-http": "0.0.30",
     "@types/faker": "^4.1.0",
-    "@types/jasmine": "2.5.47",
+    "@types/jasmine": "2.5.49",
     "@types/mocha": "2.2.41",
     "@types/supertest": "^2.0.0",
-    "chai": "^4.0.0",
+    "chai": "^4.0.1",
     "chai-http": "^3.0.0",
     "codelyzer": "~3.0.1",
     "database-updates": "^1.2.0",
@@ -97,6 +97,6 @@
     "protractor": "~5.1.2",
     "supertest": "^3.0.0",
     "ts-node": "~3.0.4",
-    "tslint": "~5.3.2"
+    "tslint": "~5.4.2"
   }
 }
