--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/faker": "^4.1.0",
     "@types/jasmine": "2.5.49",
     "@types/mocha": "2.2.41",
+    "@types/should": "^8.3.0",
     "@types/supertest": "^2.0.0",
     "chai": "^4.0.1",
     "chai-http": "^3.0.0",
@@ -95,6 +96,7 @@
     "mocha": "^3.4.2",
     "mockgoose": "^7.3.1",
     "protractor": "~5.1.2",
+    "should": "^11.2.1",
     "supertest": "^3.0.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.4.2"
