--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,8 +7,13 @@
         "moduleResolution": "node",
         "outDir": "../dist/server",
         "mapRoot": "../dist/server",
+        "skipLibCheck": true,
         "typeRoots": [
             "../node_modules/@types"
+        ],
+        "lib": [
+            "es2015",
+            "dom"
         ]
     },
     "include": [
