--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "skipLibCheck": true,
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
@@ -16,8 +17,7 @@
       "node",
       "jasmine",
       "mocha",
-      "supertest",
-      "should"
+      "supertest"
     ],
     "lib": [
       "es2016",
@@ -25,6 +25,6 @@
     ]
   },
   "exclude": [
-    "./node_modules"
+    "node_modules"
   ]
 }
