--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "node ./dist/server/server.js",
-    "postinstall:heroku": "concurrently \" ./node_modules/.bin/ng build --prod --aot\" \" ./node_modules/.bin/tsc -p ./server\" ",
-    "server:build": "tsc -p ./server && concurrently \"tsc -w -p ./server\" \"nodemon ./dist/server/server.js\" ",
-    "client:build": "ng build --prod --aot",
-    "dev": "concurrently \"npm run server:build \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
+    "start": "./node_modules/.bin/ts-node ./server/server.ts",
+    "postinstall": "./node_modules/.bin/ng build --prod --aot",
+    "server:run": "nodemon",
+    "dev": "concurrently \"npm run server:run \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "lint": "ng lint",
     "test": "ng test --single-run && npm run test:backend",
+    "test:backend": "./node_modules/.bin/_mocha ./test/server/**/*.spec.ts --compilers ts:ts-node/register --recursive --check-leaks -t 50000",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e",
-    "test:backend": "./node_modules/.bin/_mocha ./test/server/**/*.spec.ts --compilers ts:ts-node/register --recursive --check-leaks -t 50000",
     "build": "npm run client:build && npm run server:build",
-    "build:prod": "ng build --prod --aot && nodemon server.js --exitcrash",
+    "server:build": "tsc -p ./server",
+    "client:build": "ng build --prod --aot",
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
   },
   "dependencies": {
@@ -66,6 +66,7 @@
     "ngx-bootstrap": "^1.7.0",
     "nodemon": "^1.11.0",
     "normalize-css": "^2.3.1",
+    "ts-node": "~3.0.4",
     "typescript": "~2.3.4",
     "rxjs": "^5.4.0",
     "zone.js": "^0.8.11"
@@ -98,7 +99,6 @@
     "protractor": "~5.1.2",
     "should": "^11.2.1",
     "supertest": "^3.0.0",
-    "ts-node": "~3.0.4",
     "tslint": "~5.4.2"
   }
 }
