--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "server:run": "nodemon",
     "dev": "concurrently \"npm run server:run \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "lint": "ng lint",
-    "test": "ng test --single-run && npm run test:backend",
+    "test": "ng test --single-run --silent && npm run test:backend",
     "test:backend": "./node_modules/.bin/_mocha ./test/server/**/*.spec.ts --compilers ts:ts-node/register --recursive --check-leaks -t 50000",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
@@ -31,23 +31,23 @@
   },
   "dependencies": {
     "@angular/cli": "1.1.1",
-    "@angular/common": "^4.1.3",
-    "@angular/compiler": "^4.1.3",
-    "@angular/compiler-cli": "^4.1.3",
-    "@angular/core": "^4.1.3",
-    "@angular/forms": "^4.1.3",
-    "@angular/http": "^4.1.3",
-    "@angular/platform-browser": "^4.1.3",
-    "@angular/platform-browser-dynamic": "^4.1.3",
-    "@angular/router": "^4.1.3",
+    "@angular/common": "^4.2.2",
+    "@angular/compiler": "^4.2.2",
+    "@angular/compiler-cli": "^4.2.2",
+    "@angular/core": "^4.2.2",
+    "@angular/forms": "^4.2.2",
+    "@angular/http": "^4.2.2",
+    "@angular/platform-browser": "^4.2.2",
+    "@angular/platform-browser-dynamic": "^4.2.2",
+    "@angular/router": "^4.2.2",
     "@ngx-translate/core": "7.0.0",
     "@ngx-translate/http-loader": "0.1.0",
     "@types/body-parser": "^1.16.3",
     "@types/errorhandler": "0.0.30",
     "@types/express": "^4.0.35",
     "@types/morgan": "^1.7.32",
-    "@types/node": "~7.0.29",
-    "@types/jasmine": "2.5.51",
+    "@types/node": "~7.0.31",
+    "@types/jasmine": "2.5.52",
     "@types/mocha": "2.2.41",
     "@types/should": "^8.3.0",
     "@types/supertest": "^2.0.0",
@@ -63,7 +63,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.1",
-    "mongoose": "^4.10.5",
+    "mongoose": "^4.10.6",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
     "ngx-bootstrap": "^1.7.1",
