--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
   },
   "dependencies": {
+    "@angular/animations": "^4.2.2",
     "@angular/cli": "1.1.1",
     "@angular/common": "^4.2.2",
     "@angular/compiler": "^4.2.2",
@@ -45,10 +46,10 @@
     "@types/body-parser": "^1.16.3",
     "@types/errorhandler": "0.0.30",
     "@types/express": "^4.0.35",
-    "@types/morgan": "^1.7.32",
-    "@types/node": "~7.0.31",
     "@types/jasmine": "2.5.52",
     "@types/mocha": "2.2.41",
+    "@types/morgan": "^1.7.32",
+    "@types/node": "~7.0.31",
     "@types/should": "^8.3.0",
     "@types/supertest": "^2.0.0",
     "angular2-jwt": "^0.2.3",
@@ -69,9 +70,9 @@
     "ngx-bootstrap": "^1.7.1",
     "nodemon": "^1.11.0",
     "normalize-css": "^2.3.1",
+    "rxjs": "^5.4.0",
     "ts-node": "~3.0.6",
     "typescript": "~2.3.4",
-    "rxjs": "^5.4.0",
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
