--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-storage",
-  "version": "0.20.3",
+  "version": "0.20.5",
   "description": "Test Case Management System",
   "license": "GPLv3",
   "author": "Dmitry Zakharov",
@@ -74,6 +74,7 @@
     "rxjs": "^5.4.0",
     "ts-node": "~3.0.6",
     "typescript": "~2.3.4",
+    "web-animations-js": "^2.2.5",
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
