--- a/package.json
+++ b/package.json
@@ -43,16 +43,19 @@
     "@angular/router": "^4.2.6",
     "@ngx-translate/core": "7.0.0",
     "@ngx-translate/http-loader": "0.1.0",
+    "@types/bcrypt": "^1.0.0",
     "@types/body-parser": "^1.16.4",
     "@types/errorhandler": "0.0.30",
     "@types/express": "^4.0.36",
     "@types/jasmine": "2.5.53",
     "@types/mocha": "2.2.41",
+    "@types/mongoose": "^4.7.18",
     "@types/morgan": "^1.7.32",
     "@types/node": "~8.0.10",
     "@types/should": "^8.3.0",
     "@types/supertest": "^2.0.1",
     "angular2-jwt": "^0.2.3",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.0.0-alpha.6",
     "compression": "^1.7.0",
