--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
   },
   "dependencies": {
-    "@angular/animations": "^4.2.6",
+    "@angular/animations": "^4.3.0",
     "@angular/cli": "1.2.1",
-    "@angular/common": "^4.2.6",
-    "@angular/compiler": "^4.2.6",
-    "@angular/compiler-cli": "^4.2.6",
-    "@angular/core": "^4.2.6",
-    "@angular/forms": "^4.2.6",
-    "@angular/http": "^4.2.6",
-    "@angular/platform-browser": "^4.2.6",
-    "@angular/platform-browser-dynamic": "^4.2.6",
-    "@angular/router": "^4.2.6",
+    "@angular/common": "^4.3.0",
+    "@angular/compiler": "^4.3.0",
+    "@angular/compiler-cli": "^4.3.0",
+    "@angular/core": "^4.3.0",
+    "@angular/forms": "^4.3.0",
+    "@angular/http": "^4.3.0",
+    "@angular/platform-browser": "^4.3.0",
+    "@angular/platform-browser-dynamic": "^4.3.0",
+    "@angular/router": "^4.3.0",
     "@ngx-translate/core": "7.0.0",
     "@ngx-translate/http-loader": "0.1.0",
     "@types/bcrypt": "^1.0.0",
@@ -54,6 +54,7 @@
     "@types/should": "^8.3.0",
     "@types/supertest": "^2.0.2",
     "angular2-jwt": "^0.2.3",
+    "angular2-notifications": "^0.7.4",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.0.0-alpha.6",
@@ -67,7 +68,7 @@
     "express-validator": "^3.2.1",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^7.4.1",
-    "mongoose": "^4.11.2",
+    "mongoose": "^4.11.3",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
     "ngx-bootstrap": "^1.7.1",
@@ -82,7 +83,7 @@
   "devDependencies": {
     "@biesbjerg/ngx-translate-extract": "^2.3.2",
     "@types/chai": "^4.0.1",
-    "@types/chai-http": "0.0.30",
+    "@types/chai-http": "3.0.0",
     "@types/faker": "^4.1.0",
     "concurrently": "^3.5.0",
     "chai": "^4.1.0",
