--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
     "ngx-bootstrap": "^1.7.1",
+    "ngx-clickout": "^1.0.1",
     "nodemon": "^1.11.0",
     "normalize-css": "^2.3.1",
     "rxjs": "^5.4.2",
