--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "set NODE_ENV=production&& node app.js",
     "postinstall": "./node_modules/.bin/ng build --prod --aot",
     "server:run": "nodemon",
+    "hmr": "concurrently \"npm run server:run \" \"ng serve --hmr -e=hmr --progress=false --proxy-config proxy.conf.json\" ",
     "dev": "concurrently \"npm run server:run \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "lint": "ng lint",
     "test": "ng test --single-run --silent && npm run test:backend",
@@ -82,14 +83,15 @@
     "zone.js": "^0.8.13"
   },
   "devDependencies": {
+    "@angularclass/hmr": "^2.1.3",
     "@biesbjerg/ngx-translate-extract": "^2.3.2",
     "@types/chai": "^4.0.1",
     "@types/chai-http": "3.0.0",
     "@types/faker": "^4.1.0",
-    "concurrently": "^3.5.0",
     "chai": "^4.1.0",
     "chai-http": "^3.0.0",
     "codelyzer": "~3.1.2",
+    "concurrently": "^3.5.0",
     "faker": "^4.1.0",
     "jasmine-core": "~2.6.4",
     "jasmine-spec-reporter": "~4.1.1",
