--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@angular/animations": "^4.3.1",
-    "@angular/cli": "1.2.1",
+    "@angular/cli": "1.2.3",
     "@angular/common": "^4.3.1",
     "@angular/compiler": "^4.3.1",
     "@angular/compiler-cli": "^4.3.1",
@@ -50,9 +50,10 @@
     "@types/errorhandler": "0.0.30",
     "@types/express": "^4.0.36",
     "@types/jasmine": "2.5.53",
+    "@types/jasminewd2": "~2.0.2",
     "@types/mocha": "2.2.41",
     "@types/morgan": "^1.7.32",
-    "@types/node": "~8.0.14",
+    "@types/node": "~8.0.15",
     "@types/should": "^8.3.0",
     "@types/supertest": "^2.0.2",
     "angular2-jwt": "^0.2.3",
@@ -70,20 +71,21 @@
     "express-validator": "^3.2.1",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^7.4.1",
-    "mongoose": "^4.11.3",
+    "mongoose": "^4.11.4",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
-    "ngx-bootstrap": "^1.7.1",
+    "ngx-bootstrap": "^1.8.0",
     "ngx-clickout": "^1.0.1",
     "nodemon": "^1.11.0",
     "normalize-css": "^2.3.1",
     "rxjs": "^5.4.2",
-    "ts-node": "~3.2.0",
+    "ts-node": "~3.2.1",
     "typescript": "~2.4.2",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@angular/language-service": "^4.0.0",
     "@biesbjerg/ngx-translate-extract": "^2.3.2",
     "@types/chai": "^4.0.1",
     "@types/chai-http": "3.0.0",
