--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   "scripts": {
     "ng": "ng",
     "start": "set NODE_ENV=production&& node app.js",
-    "postinstall": "./node_modules/.bin/ng build --prod --aot",
+    "postinstall": "./node_modules/.bin/ng build --prod --aot --no-progress",
     "server:run": "nodemon",
     "hmr": "concurrently \"npm run server:run \" \"ng serve --hmr -e=hmr --progress=false --proxy-config proxy.conf.json\" ",
     "dev": "concurrently \"npm run server:run \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "lint": "ng lint --type-check",
-    "test": "ng test --single-run --silent && npm run test:backend",
+    "test": "ng test --single-run --no-progress && npm run test:backend",
     "test:backend": "./node_modules/.bin/_mocha ./test/server/**/*.spec.ts --compilers ts:ts-node/register --recursive --check-leaks -t 50000",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
-    "e2e": "ng e2e --proxy-config proxy.conf.json",
+    "e2e": "ng e2e --no-progress --proxy-config proxy.conf.json",
     "build": "npm run client:build && npm run server:build",
     "server:build": "tsc -p ./server",
     "client:build": "ng build --prod --aot",
