--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dev": "concurrently \"npm run server:run \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "lint": "ng lint --type-check",
     "test": "ng test --single-run --no-progress && npm run test:backend",
+    "test:frontend": "./node_modules/.bin/istanbul cover ng test --single-run --no-progress", 
     "test:backend": "./node_modules/.bin/_mocha ./test/server/**/*.spec.ts --compilers ts:ts-node/register --recursive --check-leaks -t 50000",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
