--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/node": "~8.0.19",
     "@types/should": "^8.3.0",
     "@types/supertest": "^2.0.2",
+    "angular-tree-component": "^4.0.0",
     "angular2-jwt": "^0.2.3",
     "angular2-notifications": "^0.7.7",
     "bcrypt": "^1.0.2",
