--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
   },
   "dependencies": {
-    "@angular/animations": "^4.3.6",
+    "@angular/animations": "^4.4.1",
     "@angular/cli": "1.3.2",
-    "@angular/common": "^4.3.6",
-    "@angular/compiler": "^4.3.6",
-    "@angular/compiler-cli": "^4.3.6",
-    "@angular/core": "^4.3.6",
-    "@angular/forms": "^4.3.6",
-    "@angular/http": "^4.3.6",
-    "@angular/platform-browser": "^4.3.6",
-    "@angular/platform-browser-dynamic": "^4.3.6",
-    "@angular/router": "^4.3.6",
+    "@angular/common": "^4.4.1",
+    "@angular/compiler": "^4.4.1",
+    "@angular/compiler-cli": "^4.4.1",
+    "@angular/core": "^4.4.1",
+    "@angular/forms": "^4.4.1",
+    "@angular/http": "^4.4.1",
+    "@angular/platform-browser": "^4.4.1",
+    "@angular/platform-browser-dynamic": "^4.4.1",
+    "@angular/router": "^4.4.1",
     "@angularclass/hmr": "^2.1.3",
     "@ngx-translate/core": "7.2.0",
     "@ngx-translate/http-loader": "1.0.2",
@@ -50,63 +50,63 @@
     "@types/body-parser": "^1.16.5",
     "@types/errorhandler": "0.0.31",
     "@types/express": "^4.0.37",
-    "@types/jasmine": "2.5.54",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/mocha": "2.2.42",
+    "@types/jasmine": "^2.6.0",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/mocha": "2.2.43",
     "@types/morgan": "^1.7.32",
-    "@types/node": "~8.0.25",
+    "@types/node": "~8.0.28",
     "@types/should": "^11.2.0",
     "@types/supertest": "^2.0.3",
-    "angular-tree-component": "^4.1.0",
+    "angular-tree-component": "^5.0.0",
     "angular2-jwt": "^0.2.3",
     "angular2-notifications": "^0.7.7",
-    "bcrypt": "^1.0.2",
-    "body-parser": "^1.17.2",
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.1",
     "bootstrap": "^4.0.0-beta",
     "compression": "^1.7.0",
     "config": "^1.26.2",
     "cookie-parser": "^1.4.3",
-    "core-js": "^2.5.0",
+    "core-js": "^2.5.1",
     "database-updates": "^2.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.15.4",
     "express-validator": "^3.2.1",
     "font-awesome": "^4.7.0",
-    "jsonwebtoken": "^7.4.3",
-    "mongoose": "^4.11.9",
+    "jsonwebtoken": "^8.0.1",
+    "mongoose": "^4.11.11",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
-    "ngx-bootstrap": "^1.9.1",
+    "ngx-bootstrap": "^1.9.3",
     "ngx-clickout": "^1.0.2",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.12.1",
     "normalize-css": "^2.3.1",
     "rxjs": "^5.4.3",
     "ts-node": "~3.3.0",
-    "typescript": "~2.4.2",
+    "typescript": "~2.5.2",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.17"
   },
   "devDependencies": {
-    "@angular/language-service": "^4.3.6",
+    "@angular/language-service": "^4.4.1",
     "@biesbjerg/ngx-translate-extract": "^2.3.2",
     "@types/chai": "^4.0.4",
-    "@types/chai-http": "3.0.2",
+    "@types/chai-http": "3.0.3",
     "@types/faker": "^4.1.1",
-    "chai": "^4.1.1",
+    "chai": "^4.1.2",
     "chai-http": "^3.0.0",
-    "codelyzer": "~3.1.2",
+    "codelyzer": "~3.2.0",
     "concurrently": "^3.5.0",
     "faker": "^4.1.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.0",
+    "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-typescript": "^3.0.5",
-    "mocha": "^3.5.0",
+    "mocha": "^3.5.3",
     "mockgoose": "^7.3.3",
     "protractor": "~5.1.2",
     "supertest": "^3.0.0",
